tests/fixtures/errors/unknown_index.gcl
param x: Velocity[NoSuchIndex] = 1.0 m / s;
